--- a/src/assests/scss/app.scss
+++ b/src/assests/scss/app.scss
@@ -5,11 +5,6 @@
 @import './node_modules/bootstrap/scss/variables';
 @import 'variables';
 @import './node_modules/bootstrap/scss/mixins.scss';
-@import './node_modules/bootstrap/scss/card.scss';
-@import './node_modules/bootstrap/scss/reboot.scss';
-@import './node_modules/bootstrap/scss/utilities/text.scss';
-@import './node_modules/bootstrap/scss/tables.scss';
-@import './node_modules/bootstrap/scss/dropdown.scss';
 // Structure
 
 @import 'custom/structure/topbar';
@@ -36,3 +31,33 @@
 @import './icons.scss';
 
 @import 'custom/plugins/apexcharts';
+
+
+body[data-theme='dark'] {
+    color: #a6b0cf;
+
+    .card {
+        background-color: #2a3042;
+        border: 0 solid #32394e;
+      }
+    .text-muted {
+        color: #c3cbe4 !important;
+        --bs-text-opacity: 1;
+    }
+      .text-bold {
+        color: #c3cbe4 !important;
+    }
+
+    .table {
+        th,
+        td {
+          border-color: #32394e;
+        }
+      }
+
+      .dropdown-menu {
+        background-color: #2a3042;
+        color: #fff;
+        border: $dropdown-border-width solid #fff;
+      }
+}
