--- a/src/assests/scss/app.scss
+++ b/src/assests/scss/app.scss
@@ -5,6 +5,11 @@
 @import './node_modules/bootstrap/scss/variables';
 @import 'variables';
 @import './node_modules/bootstrap/scss/mixins.scss';
+@import './node_modules/bootstrap/scss/card.scss';
+@import './node_modules/bootstrap/scss/reboot.scss';
+@import './node_modules/bootstrap/scss/utilities/text.scss';
+@import './node_modules/bootstrap/scss/tables.scss';
+@import './node_modules/bootstrap/scss/dropdown.scss';
 // Structure
 
 @import 'custom/structure/topbar';
